--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,111 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'variables';
+@import 'extends';
+@import 'material';
+
+html {
+  font-family: $default-font;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body {
+  font-size: 16px;
+
+  // モバイルはやや小さめ
+  @media (max-width: 767px) {
+    font-size: 14px;
+  }
+
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+h2 {
+  margin: 0.4em 0.8em;
+  padding: 0.4em 0.8em;
+  border-left: 4px solid $color-skyblue;
+}
+
+// フォントの設定
+h1 { font-size: 2.0em; }
+h2 { font-size: 1.7em; }
+h3 { font-size: 1.5em; }
+h4 { font-size: 1.3em; }
+h5 { font-size: 1.1em; }
+h6 { font-size: 1.0em; }
+p  { font-size: 1.0em; }
+
+
+a {
+  text-decoration: none;
+
+  &:hover, &:link, &:visited {
+    color: #00A8D5;
+  }
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+code {
+  font-family: $code-fonts;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+code {
+  .reserved {
+    color: $color-code-reserved;
+  }
+  .function {
+    color: $color-code-function;
+  }
+  .variable {
+    color: $color-code-variable;
+  }
+  .property {
+    color: $color-code-property;
+  }
+  .string {
+    color: $color-code-string;
+  }
+}
+
+.pull-right {
+  float: right;
+}
+
+.pull-left {
+  float: left;
+}
+
+a, button {
+  &.twitter {
+    background: $twitter-color !important;
+    color: #fff !important;
+  }
+
+  &.facebook {
+    background: $facebook-color !important;
+    color: #fff !important;
+  }
+
+  &.github {
+    background: $github-color !important;
+    color: #fff !important;
+  }
+
+  &.google-plus {
+    background: $google-plus-color !important;
+    color: #fff !important;
+  }
+}
