--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -29,4 +29,5 @@ $github-color: #000;
 $linkedin-color: #0173b2;
 $tumblr-color: #36465d;
 $instagram-color: #0d3c5f;
+$hatena-color: #008fde;
 $other-color: #c0c0c0;
