--- a/src/app/components/aside-navigation/aside-navigation.component.html
+++ b/src/app/components/aside-navigation/aside-navigation.component.html
@@ -1,3 +1,8 @@
-<p>
-  aside-navigation works!
-</p>
+<aside>
+  <div class="nav-container">
+    <h5>記事カテゴリ</h5>
+    <md-chip-list class="category-tag-container">
+      <md-chip>カテゴリA</md-chip>
+    </md-chip-list>
+  </div>
+</aside>
