--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,10 +6,10 @@
     </div>
 
     <div class="networking">
-      <button md-mini-fab class="github">g</button>
       <button md-mini-fab class="twitter">t</button>
       <button md-mini-fab class="facebook">f</button>
-      <button md-mini-fab class="google-plus">g</button>
+      <button md-mini-fab class="google-plus">G</button>
+      <button md-mini-fab class="hatena">h</button>
     </div>
   </div>
 </header>
