--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,3 +1,17 @@
-<p>
-  post works!
-</p>
+<article>
+  <section>
+
+    <md-card>
+      <md-card-title>
+        Title!
+      </md-card-title>
+      <md-card-subtitle>
+
+      </md-card-subtitle>
+
+      <md-card-content>
+      </md-card-content>
+
+    </md-card>
+  </section>
+</article>
