--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-header></app-header>
 
 <main>
-  <router-outlet></router-outlet>
+  <div class="main-container">
+    <router-outlet></router-outlet>
+  </div>
   <app-aside-navigation></app-aside-navigation>
 </main>
 
