--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,10 +1,11 @@
 footer {
   width: 100%;
   height: 120px;
-  background: #f0f0f0;
+  background: #808080;
   position: relative;
 
   h4 {
+    color: #ffffff;
     margin: 0;
     padding: 1em 16px;
   }
