--- a/src/app/components/blog-index/blog-index.component.scss
+++ b/src/app/components/blog-index/blog-index.component.scss
@@ -1,3 +1,5 @@
+@import '../../../variables';
+
 article {
   width: 100%;
 }
@@ -6,4 +8,8 @@ md-card {
   display: inline-block;
   margin: 8px 12px;
   width: calc(100% - 24px);
+}
+
+md-card-title {
+  color: $color-skyblue;
 }
