--- a/src/_material.scss
+++ b/src/_material.scss
@@ -25,3 +25,13 @@ a.md-raised-button {
     color: #ffffff;
   }
 }
+
+md-chip-list {
+  md-chip {
+    margin-left: 0px !important;
+    margin-right: 4px !important;
+    margin-bottom: .4em !important;
+
+    outline: none;
+  }
+}
