--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="inner-container">
     <div class="title-container">
-      <h1 class="title">EMP</h1>
+      <h1 class="title"><a routerLink="/">EMP</a></h1>
       <p class="subtitle">無知は表現によって知となり、知は表現よって無知となる</p>
     </div>
 
