--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -3,13 +3,14 @@
 
     <md-card>
       <md-card-title>
-        Title!
+        {{ title$ | async }}
       </md-card-title>
       <md-card-subtitle>
 
       </md-card-subtitle>
 
       <md-card-content>
+        <div class="blog-body" [innerHTML]="blog$ | async"></div>
       </md-card-content>
 
     </md-card>
