--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -15,6 +15,10 @@ header {
     width: 100%;
     margin: 0;
     padding: 0;
+
+    a, a:hover, a:visited, a:link, a:active {
+      color: #ffffff;
+    }
   }
 
   .subtitle {
