--- a/src/app/components/blog-index/blog-index.component.scss
+++ b/src/app/components/blog-index/blog-index.component.scss
@@ -4,12 +4,12 @@ article {
   width: 100%;
 }
 
-md-card {
+mat-card {
   display: inline-block;
   margin: 8px 12px;
   width: calc(100% - 24px);
 }
 
-md-card-title {
+mat-card-title {
   color: $color-skyblue;
 }
