--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,10 +2,10 @@
   <div class="inner-container">
     <h4>Contacts</h4>
     <div class="networking">
-      <a md-raised-button class="github" href="https://github.com/chase0213">github</a>
-      <a md-raised-button class="twitter" href="https://twitter.com/ch0d213">twitter</a>
-      <a md-raised-button class="facebook" href="https://www.facebook.com/chisato.hasegawa.370">facebook</a>
-      <a md-raised-button class="google-plus" href="https://plus.google.com/u/0/107659637197922568889">Google+</a>
+      <a mat-raised-button class="github" href="https://github.com/chase0213">github</a>
+      <a mat-raised-button class="twitter" href="https://twitter.com/ch0d213">twitter</a>
+      <a mat-raised-button class="facebook" href="https://www.facebook.com/chisato.hasegawa.370">facebook</a>
+      <a mat-raised-button class="google-plus" href="https://plus.google.com/u/0/107659637197922568889">Google+</a>
     </div>
   </div>
 </footer>
