--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -4,13 +4,13 @@ article {
   width: 100%;
 }
 
-md-card {
+mat-card {
   display: inline-block;
   margin: 8px 12px;
   width: calc(100% - 24px);
 }
 
-md-card-title {
+mat-card-title {
   color: $color-skyblue;
   font-size: 1.8rem;
   padding: .4rem 0 1rem;
