--- a/src/app/components/aside-navigation/aside-navigation.component.html
+++ b/src/app/components/aside-navigation/aside-navigation.component.html
@@ -1,8 +1,8 @@
 <aside>
   <div class="nav-container">
     <h5>記事カテゴリ</h5>
-    <md-chip-list class="category-tag-container">
-      <md-chip *ngFor="let tag of tags$ | async" (click)="onClickTag($event, tag)">{{ tag }}</md-chip>
-    </md-chip-list>
+    <mat-chip-list class="category-tag-container">
+      <mat-chip *ngFor="let tag of tags$ | async" (click)="onClickTag($event, tag)">{{ tag }}</mat-chip>
+    </mat-chip-list>
   </div>
 </aside>
