--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,18 +1,18 @@
 <article>
   <section>
 
-    <md-card>
-      <md-card-title>
+    <mat-card>
+      <mat-card-title>
         {{ title$ | async }}
-      </md-card-title>
-      <md-card-subtitle>
+      </mat-card-title>
+      <mat-card-subtitle>
 
-      </md-card-subtitle>
+      </mat-card-subtitle>
 
-      <md-card-content>
+      <mat-card-content>
         <div class="blog-body" [innerHTML]="blog$ | async"></div>
-      </md-card-content>
+      </mat-card-content>
 
-    </md-card>
+    </mat-card>
   </section>
 </article>
