--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -15,3 +15,26 @@ mat-card-title {
   font-size: 1.8rem;
   padding: .4rem 0 1rem;
 }
+
+
+main {
+  min-height: calc(100% - 300px);
+
+  @media (min-width: 768px) {
+    align-items: flex-start;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.main-container {
+  flex-basis: 100%;
+}
+
+.aside-navigation {
+  @media (min-width: 768px) {
+    flex-basis: 320px;
+    min-width: 320px;
+    height: 100%;
+  }
+}
