--- a/src/app/components/blog-index/blog-index.component.scss
+++ b/src/app/components/blog-index/blog-index.component.scss
@@ -13,3 +13,25 @@ mat-card {
 mat-card-title {
   color: $color-skyblue;
 }
+
+main {
+  min-height: calc(100% - 300px);
+
+  @media (min-width: 768px) {
+    align-items: flex-start;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.main-container {
+  flex-basis: 100%;
+}
+
+.aside-navigation {
+  @media (min-width: 768px) {
+    flex-basis: 320px;
+    min-width: 320px;
+    height: 100%;
+  }
+}
