--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,18 +1,33 @@
-<article>
-  <section>
+<main>
+  <div class="main-container">
+    <article>
+      <section>
 
-    <mat-card>
-      <mat-card-title>
-        {{ title$ | async }}
-      </mat-card-title>
-      <mat-card-subtitle>
+        <mat-card>
+          <mat-card-title>
+            {{ title$ | async }}
+          </mat-card-title>
+          <mat-card-subtitle>
 
-      </mat-card-subtitle>
+          </mat-card-subtitle>
 
-      <mat-card-content>
-        <div class="blog-body" [innerHTML]="blog$ | async"></div>
-      </mat-card-content>
+          <mat-card-content>
+            <div class="blog-body" [innerHTML]="post"></div>
+          </mat-card-content>
 
-    </mat-card>
-  </section>
-</article>
+        </mat-card>
+      </section>
+    </article>
+  </div>
+
+  <aside class="aside-navigation">
+    <div class="nav-container">
+      <h5>記事カテゴリ</h5>
+      <mat-chip-list class="category-tag-container">
+        <mat-chip *ngFor="let tag of tags$ | async" selected="true">
+          {{ tag }}
+        </mat-chip>
+      </mat-chip-list>
+    </div>
+  </aside>
+</main>
